# openclaw-tee

./: .gitignore  README.md  pyproject.toml  requirements.txt
backends/: keystone_backend.py  trustzone_backend.py
configs/: deployment_planes.yaml  platforms.yaml  workloads.yaml
core/: executor.py  request.py  risk.py  types.py  utils.py
evaluation/: metrics.py  report.py  runner.py  timer.py
openclaw_integration/: backend_factory.py  gate.py  mapper.py  router.py
openclaw_integration/adapters/: base.py  openclaw_adapter.py
scripts/: run_backend_matrix.py  run_baseline.py  run_distributed_demo.py  run_protected.py
src/shcua_prototype/: __init__.py  config.py
src/shcua_prototype/backends/: base.py  http_backend.py  mock_backend.py  sev_backend.py  tdx_backend.py  vsock_backend.py
src/shcua_prototype/configs/: policy_default.yaml
src/shcua_prototype/core/: audit.py  decision.py  operation.py
src/shcua_prototype/evaluation/: runner.py
src/shcua_prototype/openclaw_integration/: backend_factory.py  gate.py  patch_notes.md  router.py
src/shcua_prototype/scripts/: collect_results.py  run_backend_matrix.py  run_baseline.py  run_distributed_demo.py  run_protected.py
src/shcua_prototype/trusted_plane/adapters/: keystone.py
src/shcua_prototype/workloads/: protected_config_modification.py
tests/: test_config.py  test_guarded_execution.py
trusted_plane/: common.py  server_main.py
trusted_plane/adapters/: base.py  sev.py  tdx.py  trustzone.py
workloads/: document_organization.py  high_risk_command_export.py
