[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "shcua-prototype"
version = "0.1.0"
description = "Prototype package for SHCUA orchestration and trusted execution routing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shcua_prototype = ["configs/*.yaml", "openclaw_integration/patch_notes.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
